<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_title"
            android:textStyle="bold"
            android:textSize="@dimen/header_size"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/custom_action_bar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/left_padding"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_action_bar"
            android:paddingRight="@dimen/right_padding"
            tools:context=".WeatherActivity">

            <LinearLayout
                android:id="@+id/weather_container_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_text2"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_view_text_size3" />
<!--

                <TextView
                    android:id="@+id/temperature_descripton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|end"
                    android:paddingRight="@dimen/text_view_2_padding_right"
                    android:text="@string/weather_description"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size" />


-->

                <ImageView
                    android:id="@+id/weather_condition_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wi_day_sunny" />

                <TextView
                    android:id="@+id/weather_condition_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_view_margin_top2"
                    android:text="@string/text_sunny"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/weather_condintion_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|end"
                    android:paddingRight="@dimen/text_view_padding_right"
                    android:text="@string/celsius"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/temperature_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-36dp"
                    android:gravity="center_horizontal"
                    android:text="@string/text_view_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_view_text_size2" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorWhite"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:weightSum="1">

                <EditText
                    android:id="@+id/field_location"
                    android:layout_width="@dimen/edit_text_width"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/weather_hint"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/transparentWhite"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

         <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_refresh"
                android:layout_marginBottom="@dimen/action_button_margin_bottom"
                app:fabSize="normal" />
        </FrameLayout>

        </LinearLayout>

</LinearLayout>



